添加柠檬水找零

--- a/贪心算法/1046 最后一块石头的重量.md
+++ b/贪心算法/1046 最后一块石头的重量.md
@@ -1,14 +1,14 @@
 ####  最后一块石头的重量
-有一堆石头，每块石头的重量都是正整数。
-每一回合，从中选出两块最重的石头，然后将它们一起粉碎。假设石头的重量分别为 x 和 y，且 x <= y。那么粉碎的可能结果如下：
-如果 x == y，那么两块石头都会被完全粉碎；
-如果 x != y，那么重量为 x 的石头将会完全粉碎，而重量为 y 的石头新重量为 y-x。
-最后，最多只会剩下一块石头。返回此石头的重量。如果没有石头剩下，就返回 0。
+1. 有一堆石头，每块石头的重量都是正整数。
+2. 每一回合，从中选出两块最重的石头，然后将它们一起粉碎。假设石头的重量分别为 x 和 y，且 x <= y。那么粉碎的可能结果如下：
+3. 如果 x == y，那么两块石头都会被完全粉碎；
+4. 如果 x != y，那么重量为 x 的石头将会完全粉碎，而重量为 y 的石头新重量为 y-x。
+5. 最后，最多只会剩下一块石头。返回此石头的重量。如果没有石头剩下，就返回 0。
 来源：力扣（LeetCode）
 
 **从题目中我们找重点**
-1.每一回合，从中选出两块最重的石头，然后将它们一起粉碎。
-2.最多只会剩下一块石头。
+1. 每一回合，从中选出两块最重的石头，然后将它们一起粉碎。
+2. 最多只会剩下一块石头。
 
 **代码分析**
 首先我们拿到题后先想一下第一个重点，每一回合都要选出最重的两块石头,怎么样才能选出最重的两块石头呢？这里面我们用到了 sort() 方法对数组进行重新排列最前面两项就是最大的石头 sort()方法接收2个参数a和b若 a 小于 b，在排序后的数组中 a 应该出现在 b 之前，则返回一个小于 0 的值。若 a 等于 b，则返回 0。若 a 大于 b，则返回一个大于 0 的值。（白话文可以理解为 如果 return a - b 则从小到大排列，如果 return b - a 则从大到小排列），接着我们循环 stones 然后取出最前面的第0项和第一项就代表着最大的两块石头。然后我们用数组splice() 方法，并且把两个石头都给粉碎掉。以此往复最好就剩下一个就是我们想要的石头。（这里边我们用到了 math.abs 是为了防止有两项相等返回为0然后在减的话就是负数了）。
@@ -25,5 +25,5 @@ var lastStoneWeight = function (stones) {
 ```
 又是充实的一天。
  ![图片](https://github.com/w-joker/leetcode-javascript/blob/master/image/buxiudiannao.jpg)
- 谢谢。
+ 谢谢~
 
