--- a/贪心算法/944删列造序.md
+++ b/贪心算法/944删列造序.md
@@ -41,7 +41,7 @@
 
  注：后边的数字是他们所对应的ASCII可以更直观的看清楚他们是否为非降序-想了解更多的小伙伴可以自行百度（ASCII）
 
- 然后把比较一下他们是不是--非降序--如果不是就给这一项删除并且输出删除的数量而已
+ 然后把比较一下他们是不是--非降序--如果不是就给这一项删除并且输出删除的数量而已，所以说上面这题要删除的就很明显了那就是 数组的第1项 然后我们就可以返回 D.length 也还是1。大家明白了吗？
  （非降序列是一种特殊的数列。通常非降序列的元素定义在有序域上，每一项不小于它的前一项。非降序列通常指无穷序列。）想了解更多的小伙伴可以自行百度
 ```
 
