修改944删列造序

--- a/贪心算法/944删列造序.md
+++ b/贪心算法/944删列造序.md
@@ -25,9 +25,8 @@
 - 不知道大家读完题有没有和我一样的想法
   ![图片](https://github.com/w-joker/leetcode-javascript/blob/master/image/da.jpg)
 - 明明就是简单的删除不符合要求的列的，却描述的这么复杂。
-  **从题目中我们找重点**
 
-1. 这次我们先不找重点，先把题目理清楚，做一个事情之前首先要明白为什么要做这个东西，有什么意义。我把这道题简化一些大家就可以看的懂了，看下面
+- 这次我们先不找重点，先把题目理清楚，做一个事情之前首先要明白为什么要做这个东西，有什么意义。我把这道题简化一些描述或许大家就可以看的懂了，看下面
 
 ```
 输入：["cba", "daf", "ghi"]
