--- a/贪心算法/122买卖股票的最佳时机.md
+++ b/贪心算法/122买卖股票的最佳时机.md
@@ -31,7 +31,8 @@
 
 来源：力扣（LeetCode）
 
-**代码分析**
+##### 代码分析
+
 这道题目相对来说就简单了许多，而且问题描述的也比较清晰。我们可以清晰的知道今天和以后的股票都是什么价格（我也想有这样的能力）题目就是想让我们尽可能多的去赚钱，
 既然知道了今天还有明天的价格都是什么，那么就很好办了。 假如明天的价格会比今天的高，那么我们就赶紧买，屯到明天去出售掉并且记录下利润就好了。
 
