--- a/贪心算法/455分发饼干.md
+++ b/贪心算法/455分发饼干.md
@@ -33,7 +33,7 @@
 来源：力扣（LeetCode）
 
 ##### 代码分析
-其实这道题不止一种思路，可以先满足胃口比较小的朋友的胃，也可以先满足胃口比较大的小朋友的胃，我这里是先满足了胃口比较小的小朋友的胃，代码很好理解，先把小朋友的胃口还有
+其实这道题可以先满足胃口比较小的朋友的胃，也可以先满足胃口比较大的小朋友的胃，我这里是先满足了胃口比较小的小朋友的胃，代码很好理解，先把小朋友的胃口还有
 饼干的大小都从小到大开始排列。之后2个数组循环一下。如果小朋友的胃口满足了，数值res就+1 最后输出 res 就是答案。 
 
 ```
